fixed dark mode, css still needs work

--- a/PhiloApp/static/css/dark-styles.css
+++ b/PhiloApp/static/css/dark-styles.css
@@ -4,7 +4,8 @@
   --text-color: #4a5d7e;
   --navbar-bg: #789dbc;
   --card-bg: linear-gradient(180deg, #eee8e5 0%, #edd6cbdc 100%);
-  /* Add more variables as needed */
+  --header-text: #4a5d7e;
+  --philo-section: #f5efe7;
 }
 
 [data-theme="dark"] {
@@ -12,10 +13,13 @@
   --bg-color: #1a1a2e;
   --text-color: #e6e6e6;
   --navbar-bg: #16213e;
-  --card-bg: linear-gradient(180deg, #2d4059 0%, #1a1a2e 100%);
+  --card-bg: linear-gradient(180deg, #99afcd 0%, #565675 100%);
+  --header-text: #c9cacd;
+  --philo-section: rgb(7, 15, 39);
+  
 }
 
-/* Apply Variables to Elements */
+/* Apply variables to elements */
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -25,14 +29,31 @@ body {
   background-color: var(--navbar-bg);
 }
 
-.grid-item {
+.philosopher-card {
   background: var(--card-bg);
 }
-.theme-toggle-btn {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 1.2rem;
-  padding: 5px 10px;
-  margin-left: auto; /* Push to the right if in navbar */
+
+
+header h1, header p {
+  color: var(--header-text);
+}
+
+.philosophers-section h2,.philosopher-card h3 {
+  color: var(--header-text);
+}
+
+.philosophers-section {
+  background-color: var(--philo-section);
+}
+
+.control li{
+  background: var(--card-bg);
+}
+
+.btn{
+  background-color: var(--philo-section);
+  color: var(--header-text);
+}
+footer{
+  background-color: var(--navbar-bg);
 }
